--- a/src/style/body.css
+++ b/src/style/body.css
@@ -2,6 +2,7 @@
   position: relative;
   margin-top: 50px;
   height: 2000px;
+  padding: 0 200px;
 }
 .backTopButton {
   position: fixed;
@@ -17,5 +18,7 @@
   border-radius: 5px;
   border-left: 1px solid #fff;
   border-top: 1px solid #fff;
+  user-select: none;
+  cursor: pointer;
   z-index: 100;
 }
