--- a/src/style/index.css
+++ b/src/style/index.css
@@ -4,7 +4,8 @@
   box-sizing: border-box;
 }
 body {
-  background-image: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
+  /* background-image: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%); */
+  background-image: url("../backgroundimg.jfif  ");
   background-attachment:fixed;
 }
 li {
