--- a/src/style/index.css
+++ b/src/style/index.css
@@ -5,7 +5,7 @@
 }
 body {
   /* background-image: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%); */
-  background-image: url("../backgroundimg.jfif  ");
+  background-image: url("../R-C.jfif  ");
   background-attachment:fixed;
 }
 li {
