--- a/src/style/register.css
+++ b/src/style/register.css
@@ -45,6 +45,7 @@
     width: 80px;
     height: 100%;
     line-height: 35px;
+    user-select: none;
     border-bottom-left-radius: 10px;
     border-top-left-radius: 10px;
     border-right: 1px solid #0002;
