--- a/src/style/header.css
+++ b/src/style/header.css
@@ -4,8 +4,13 @@ header{
     left: 0;
     right: 0;
     height: 50px;
-    padding: 0 200px;
     background-color: #202020aa;
+    z-index: 1000;
+}
+header > div{
+    width: 1150px;
+    height: 100%;
+    margin: 0 auto;
     display: flex;
 }
 .headerUlMenu{
@@ -16,7 +21,8 @@ header{
     font-size: 18px;
 }
 .headerUlMenu li{
-    margin-right: 40px;
+    margin-left: 5px;
+    margin-right: 35px;
 }
 .headerLiA{
     color:#fffd;
