--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,18 +1,101 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-body {
-  /* background-image: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%); */
-  background-image: url("../backgroundimg.jfif  ");
-  background-attachment:fixed;
-}
-li {
-  list-style: none;
-}
-a {
-  text-decoration: none;
-  color: #000;
+.essayMainDiv {
+  position: relative;
+  width: 1150px;
+  height: auto;
+  margin: 0 auto;
+  padding: 20px 0;
+  display: grid;
+  gap: 0 20px;
+  grid-template-columns: 2fr 1fr;
+  grid-template-rows: auto auto;
 }
 
+/* 文章列表 */
+.essayListMainDiv {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  gap: 20px;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto;
+  grid-auto-rows: auto;
+}
+.essayListMainDiv > div {
+  width: 100%;
+  height: 100%;
+  padding: 20px 30px;
+  border-radius: 20px;
+  backdrop-filter: blur(20px);
+  box-shadow: 10px 10px 10px #0007;
+  background-color: #fff4;
+}
+.essayListMainDiv > div > div {
+  margin: 5px 0;
+}
+.essayListMainDiv > div > div > span {
+  color: rgb(255, 123, 0);
+}
+.essayListMainDiv > div > div:nth-child(3) {
+  width: 500px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.essayListMainDiv > div > a {
+  float: right;
+}
+
+/* 右边栏 */
+.essayRightMainDiv {
+  width: 100%;
+  height: auto;
+  grid-row: 1 / span 2;
+  grid-column: 2;
+}
+.essayRightMainDiv > div{
+  margin-bottom: 20px;
+}
+.essayRightDiv {
+  width: 100%;
+  height: auto;
+  border-radius: 20px;
+  padding: 20px 30px;
+  backdrop-filter: blur(20px);
+  box-shadow: 10px 10px 10px #0007;
+  background-color: #fff4;
+}
+.indexSearchDiv > div:first-child{
+  font-size: 16px;
+  font-weight: bold;
+  color: #000c;
+}
+.indexSearchDiv > div:last-child{
+  width: 100%;
+  height: 45px;
+  display: grid;
+  grid-template-columns: 1fr auto;
+}
+.indexSearchDiv > div:last-child input{
+  border-top-left-radius: 22.5px;
+  border-bottom-left-radius: 22.5px;
+  outline: none;
+  border: none;
+  text-indent: 1em;
+  font-size: 16px;
+  background-color: #fffa;
+}
+.indexSearchDiv > div:last-child input:focus{
+  background-color: #fff;
+}
+.indexSearchDiv > div:last-child div{
+  width: 60px;
+  border-top-right-radius: 22.5px;
+  border-bottom-right-radius: 22.5px;
+  border-left: 1px solid #0003;
+  background-color: rgb(255, 123, 0);
+  line-height: 45px;
+  text-align: center;
+  font-size: 20px;
+  color: #fff;
+  cursor: pointer;
+}
